# ChronoGhost

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tauri.conf.json  vite.config.js
.github/: FUNDING.yml
.github/workflows/: tauri-build.yml
capabilities/: default.json
src/: App.jsx  index.css  index.css.backup  main.rs
src-tauri/capabilities/: default.json
src/components/: BlurText.jsx  FloatingExpandButton.jsx  KeybindCapture.jsx  SettingsPanel.jsx  TimerCard.jsx  Toast.jsx  UpdateNotification.jsx  WindowControls.jsx
src/utils/: globalShortcuts.js  platform.js  soundManager.js
