[package]
name = "chrono_ghost"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["wry"] }
tauri-plugin-global-shortcut = "2.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }
